# bubl-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-form.yml  issue-form.yml  question-form.yml
.github/workflows/: docs.yml
bubl-ai-a/bubl_ai/a/: entity_a.py  service_a.py
bubl-ai-b/bubl_ai/b/: entity_b.py  service_b.py
bubl-ai-c/bubl_ai/c/: entity_c.py  service_c.py
bubl-ai-core/bubl_ai/core/: base_entity.py  core_service.py
bubl-ai-d/bubl_ai/d/: entity_d.py  service_d.py
bubl/core/: utils.py
docs/: CNAME  mkdocs.yml
docs/docs/: rpi_setup.md
